--- a/Affichage.html
+++ b/Affichage.html
@@ -234,7 +234,7 @@
             td.textContent = record[header] || '';  // Use empty string for null/undefined values
             td.addEventListener('blur', function() {
               record[header] = td.textContent; // Update record with edited value
-              updateRecordInGrist(record); // Save changes to Grist
+              // updateRecordInGrist(record); // Save changes to Grist
             });
             tr.appendChild(td);
           });
@@ -263,15 +263,16 @@
       });
 
       // Add event listener for "Supprimer" option
-      document.getElementById('deleteOption').addEventListener('click', function() {
+      document.getElementById('deleteOption').addEventListener('click', () => {
         console.log("Supprimer clicked for row ID:", selectedRecordId);
-        deleteRecordInGrist(selectedRecordId); // Delete the record using the stored ID
+        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]]);
       });
+
 
       // Function to delete a record in Grist
       function deleteRecordInGrist(recordId) {
         grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', recordId]]);
-              }
+      }
 
       // Fetch records from Grist
       grist.onRecords(function(receivedRecords) {
@@ -318,7 +319,7 @@
           console.log("Record updated in Grist:", record);
         }).catch(error => {
           console.error("Failed to update record in Grist:", error);
-        });
+      });
       }
     </script>
   </body>
