--- a/Affichage.html
+++ b/Affichage.html
@@ -250,8 +250,8 @@
 
         const contextMenu = document.getElementById('contextMenu');
         contextMenu.style.display = 'block';
-        contextMenu.style.left = ${event.pageX}px;
-        contextMenu.style.top = ${event.pageY}px;
+        contextMenu.style.left = `${event.pageX}px`;
+        contextMenu.style.top = `${event.pageY}px`;
       }
 
       // Hide context menu if clicked elsewhere
@@ -319,7 +319,7 @@
           console.log("Record updated in Grist:", record);
         }).catch(error => {
           console.error("Failed to update record in Grist:", error);
-        });
+      });
       }
     </script>
   </body>
