--- a/Affichage.html
+++ b/Affichage.html
@@ -272,7 +272,12 @@
               // Une fois la suppression terminée, actualise le tableau HTML
               records = records.filter(record => record.ID_Ligne !== selectedRecordId); // Filtre localement le tableau
               populateTable();  // Actualise l'affichage du tableau
-              console.log("Tableau actualisé après suppression.");
+      
+              // Masquer le menu contextuel après la suppression
+              const contextMenu = document.getElementById('contextMenu');
+              contextMenu.style.display = 'none';
+      
+              console.log("Tableau actualisé et menu contextuel masqué après suppression.");
           })
           .catch(error => {
               console.error("Erreur lors de la suppression de la ligne dans Grist:", error);
