--- a/Affichage.html
+++ b/Affichage.html
@@ -234,7 +234,7 @@
             td.textContent = record[header] || '';  // Use empty string for null/undefined values
             td.addEventListener('blur', function() {
               record[header] = td.textContent; // Update record with edited value
-              updateRecordInGrist(record); // Save changes to Grist
+              // updateRecordInGrist(record); // Save changes to Grist
             });
             tr.appendChild(td);
           });
@@ -265,20 +265,9 @@
       // Add event listener for "Supprimer" option
       document.getElementById('deleteOption').addEventListener('click', () => {
         console.log("Supprimer clicked for row ID:", selectedRecordId);
-        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]])
-        .then(() => {
-          records = records.filter(record => record.ID_Ligne !== selectedRecordId);
-          populateTable();
-
-          const contextMenu = document.getElementById('contextMenu');
-          contextMenu.style.display = 'none';
-          
-          console.log("Tableau actualisé et menu contextuel masqué après suppression.");
-        })
-        .catch(error => {
-          console.error("Erreur lors de la suppression de la ligne dans Grist:", error);
-        });
+        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]]);
       });
+
 
       // Function to delete a record in Grist
       function deleteRecordInGrist(recordId) {
@@ -330,7 +319,7 @@
           console.log("Record updated in Grist:", record);
         }).catch(error => {
           console.error("Failed to update record in Grist:", error);
-        });
+      });
       }
     </script>
   </body>
