--- a/Affichage.html
+++ b/Affichage.html
@@ -265,10 +265,20 @@
       // Add event listener for "Supprimer" option
       document.getElementById('deleteOption').addEventListener('click', () => {
         console.log("Supprimer clicked for row ID:", selectedRecordId);
-        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]]);
+        
+        // Supprime la ligne dans Grist
+        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]])
+        .then(() => {
+        // Une fois la suppression terminée, actualise le tableau HTML
+          records = records.filter(record => record.ID_Ligne !== selectedRecordId); // Filtre localement le tableau
+          populateTable();  // Actualise l'affichage du tableau
+          console.log("Tableau actualisé après suppression.");
+      })
+      .catch(error => {
+          console.error("Erreur lors de la suppression de la ligne dans Grist:", error);
       });
-
-
+  });
+      
       // Function to delete a record in Grist
       function deleteRecordInGrist(recordId) {
         grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', recordId]]);
