--- a/Affichage.html
+++ b/Affichage.html
@@ -265,7 +265,19 @@
       // Add event listener for "Supprimer" option
       document.getElementById('deleteOption').addEventListener('click', () => {
         console.log("Supprimer clicked for row ID:", selectedRecordId);
-        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]]);
+        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', Number(selectedRecordId)]])
+        .then(() => {
+          records = records.filter(record => record.ID_Ligne !== selectedRecordId);
+          populateTable();
+
+          const contextMenu = document.getElementById('contextMenu');
+          contextMenu.style.display = 'none';
+          
+          console.log("Tableau actualisé et menu contextuel masqué après suppression.");
+        })
+        .catch(error => {
+          console.error("Erreur lors de la suppression de la ligne dans Grist:", error);
+        });
       });
 
 
